@@ -16,6 +16,7 @@
 #include "ldap.h"
 
 typedef struct ldapmap_struct {
+	  /* Setup parameters */
 	char *ldaphost;
 	int  ldapport;
 	char *base;
@@ -25,6 +26,9 @@ typedef struct ldapmap_struct {
 	char *filter;
 	char *attr;
 	int  wildcards;
+	  /* Bound state */
+	LDAP *ld;
+	int simple_bind_result;
 } LDAPMAP;
 
 extern int deferit;
@@ -58,28 +62,26 @@ open_ldap(sip, caller)
 			return NULL;
 		}
 
-		lmap = (LDAPMAP *) malloc(sizeof(LDAPMAP));
+		lmap = (LDAPMAP *) emalloc(sizeof(LDAPMAP));
+
 		if (spl == NULL)
 			sp_install(symid, (u_char *)lmap, 0, spt_files);
 		else
 			spl->data = (u_char *)lmap;
 
-		lmap->ldaphost = NULL;
+		memset(lmap, 0, sizeof(LDAPMAP));
+
 		lmap->ldapport = LDAP_PORT;
-		lmap->wildcards = 0;
-		lmap->base = NULL;
-		lmap->binddn = NULL;
-		lmap->passwd = NULL;
 		lmap->scope = LDAP_SCOPE_SUBTREE;
-		lmap->filter = NULL;
-		lmap->attr = NULL;
 	
 		while (fgets(buf, sizeof(buf), fp) != NULL)  {
 			register char *p = buf;
 
 			buf[sizeof(buf)-1] = '\0';	/* make sure we didn't
 							   overfill the buf */
-			buf[strlen(buf)-1] = '\0';	/* chop() */
+			if (buf[0] != 0)
+			  buf[strlen(buf)-1] = '\0';	/* chop() */
+
 			while (isascii(*p) && isspace(*p))
 				p++;
 			if (*p == '#')			/* skip comment */
@@ -147,7 +149,16 @@ open_ldap(sip, caller)
 			}
 		}
 		fclose(fp);
+
+		if (lmap->ldaphost)
+		  lmap->ld = ldap_open(lmap->ldaphost, lmap->ldapport);
+
+		if (lmap->ld != NULL) {
+		  lmap->simple_bind_result =
+		    ldap_simple_bind_s(lmap->ld, lmap->binddn, lmap->passwd);
+		}
 	}
+
 	return lmap;
 }
 
@@ -160,7 +171,6 @@ search_ldap(sip)
 {
 	LDAPMAP *lmap;
 
-	LDAP *ld = NULL;
 	LDAPMessage *msg = NULL, *entry;
 	char filter[LDAP_FILT_MAXSIZ + 1];
 	char **vals = NULL;
@@ -172,15 +182,12 @@ search_ldap(sip)
 	int filterpos = 0;
 
 	conscell *tmp = NULL;
-	u_char *us = NULL;
 
 	lmap = open_ldap(sip, "search_ldap");
 	if (lmap == NULL)
 		return NULL;
 
-	ld = ldap_open(lmap->ldaphost, lmap->ldapport);
-	if (ld == NULL || ldap_simple_bind_s(ld, lmap->binddn,
-					     lmap->passwd) != LDAP_SUCCESS) {
+	if (lmap->ld == NULL || lmap->simple_bind_result != LDAP_SUCCESS) {
 		++deferit;
 		v_set(DEFER, DEFER_IO_ERROR);
 		fprintf(stderr, "search_ldap: cannot connect '%s'/'%s'!\n",
@@ -225,7 +232,7 @@ search_ldap(sip)
 	}
 
 	attrs[0] = lmap->attr;
-	if (ldap_search_s(ld, lmap->base, lmap->scope, filter,
+	if (ldap_search_s(lmap->ld, lmap->base, lmap->scope, filter,
 			  attrs, 0, &msg) != LDAP_SUCCESS) {
 		++deferit;
 		v_set(DEFER, DEFER_IO_ERROR);
@@ -233,12 +240,12 @@ search_ldap(sip)
 		goto ldap_exit;		 
 	}
 
-	entry = ldap_first_entry(ld, msg);
+	entry = ldap_first_entry(lmap->ld, msg);
 	if (entry == NULL)
 		goto ldap_exit;
 
 	/* only get the first attribute, ignore others if defined */
-	vals = ldap_get_values(ld, entry, lmap->attr);
+	vals = ldap_get_values(lmap->ld, entry, lmap->attr);
 	if (vals != NULL) {
 		/* if there is more that one, use the first */
 		int slen = strlen(vals[0]);
@@ -251,8 +258,6 @@ ldap_exit:
 		ldap_value_free(vals);
 	if (msg != NULL)
 		ldap_msgfree(msg);
-	if (ld != NULL)
-		ldap_unbind_s(ld);
 
 	return tmp;
 }
@@ -278,6 +283,8 @@ close_ldap(sip,comment)
 	sp_delete(spl, spt_files);
 	symbol_free_db(sip->file, spt_files->symbols);
 
+	if (lmap->ld != NULL)
+		ldap_unbind_s(lmap->ld);
 	if (lmap->base != NULL)
 		free(lmap->base);
 	if (lmap->ldaphost != NULL)
@@ -304,22 +311,29 @@ modp_ldap(sip)
         spkey_t symid;
         int rval;
 
-        if (sip->file == NULL
-            || (lmap = open_ldap(sip, "modp_ldap")) == NULL)
-                return 0;
+        if (sip->file == NULL)
+	  return 0; /* No file defined */
+
+	if ((lmap = open_ldap(sip, "modp_ldap")) == NULL)
+	  return 0; /* Fails to open ??? */
+
+	if (lmap->simple_bind_result != LDAP_SUCCESS)
+	  return 1; /* Rebind might help ?? */
+
         if (lstat(sip->file, &stbuf) < 0) {
-                fprintf(stderr, "modp_ldap: cannot fstat(\"%s\")!\n",
-                                sip->file);
-                return 0;
+	  fprintf(stderr, "modp_ldap: cannot fstat(\"%s\")!\n",
+		  sip->file);
+	  return 0;
         }
 
         symid = symbol_db((u_char *)sip->file, spt_files->symbols);
         spl = sp_lookup(symid, spt_modcheck);
         if (spl != NULL) {
-                rval = ((long)stbuf.st_mtime != (long)spl->data
-                        || (long)stbuf.st_nlink != (long)spl->mark);
+	  rval = ((long)stbuf.st_mtime != (long)spl->data
+		  || (long)stbuf.st_nlink != (long)spl->mark);
         } else
-                rval = 0;
+	  rval = 0;
+
         sp_install(symid, (u_char *)((long)stbuf.st_mtime),
                    stbuf.st_nlink, spt_modcheck);
         return rval;
